--- a/package.json
+++ b/package.json
@@ -9,23 +9,35 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@heroicons/react": "^1.0.6",
+		"@fontsource/rubik": "^4.5.11",
+		"@heroicons/react": "^2.0.11",
+		"@prisma/client": "^4.3.1",
+		"@worldcoin/id": "^0.8.0",
 		"autoprefixer": "^10.4.7",
-		"connectkit": "^0.0.1",
-		"ethers": "^5.6.9",
-		"next": "12.1.6",
-		"next-themes": "^0.2.0",
+		"connectkit": "^0.0.2",
+		"ethers": "^5.7.1",
+		"framer-motion": "^7.3.6",
+		"iron-session": "^6.2.1",
+		"next": "^12.3.1",
 		"postcss": "^8.4.14",
-		"react": "18.1.0",
-		"react-dom": "18.1.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hot-toast": "^2.4.0",
+		"siwe": "^2.0.5",
+		"swr": "^2.0.0-beta.7",
 		"tailwindcss": "^3.0.24",
-		"wagmi": "^0.6.2"
+		"wagmi": "^0.6.6"
 	},
 	"devDependencies": {
 		"@types/node": "^17.0.35",
 		"@types/react": "^18.0.9",
 		"eslint": "8.16.0",
 		"eslint-config-next": "12.1.6",
+		"prettier-plugin-sort-imports-desc": "^1.0.0",
+		"prisma": "^4.3.1",
 		"typescript": "^4.6.4"
+	},
+	"prisma": {
+		"schema": "src/prisma/schema.prisma"
 	}
 }
