--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 	},
 	"dependencies": {
 		"@fontsource/rubik": "^4.5.11",
+		"@headlessui/react": "^1.7.3",
 		"@heroicons/react": "^2.0.11",
 		"@prisma/client": "^4.4.0",
+		"@tailwindcss/forms": "^0.5.3",
 		"@worldcoin/id": "^0.8.0",
 		"autoprefixer": "^10.4.7",
 		"connectkit": "^0.0.2",
