--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"lint": "next lint",
 		"postinstall": "prisma generate",
 		"migrate": "prisma migrate deploy",
-		"vercel-build": "yarn migrate && next build"
+		"vercel-build": "npm run migrate && next build"
 	},
 	"dependencies": {
 		"@fontsource/rubik": "^4.5.11",
