feat: create & save action ID

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-APP_KEY=
-DATABASE_URL=
+APP_KEY=U4DFT42sr9xVUQXcAKv5iX13vUuW5gN1 # must be 32 characters long
+DATABASE_URL=mysql://root:rootSecret!@localhost/world-id-poap
 NEXT_PUBLIC_INFURA_ID=
+POAP_ID=
+POAP_AUDIENCE=
+POAP_SECRET=
+WLD_DEV_PORTAL_API_KEY=
+WLD_APP_ID=wid_1234567890
