--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint",
 		"postinstall": "prisma generate",
 		"migrate": "prisma migrate deploy",
+		"migrate:dev": "prisma migrate dev",
 		"vercel-build": "npm run migrate && next build"
 	},
 	"dependencies": {
