--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 APP_KEY=
-DATABASE_URL=
+DATABASE_URL=mysql://root:rootSecret!@localhost/world-id-poap
 NEXT_PUBLIC_INFURA_ID=
+WLD_APP_ID=
+POAP_ID=
+POAP_AUDIENCE=
+POAP_SECRET=
+WLD_DEV_PORTAL_API_KEY=
+NEXT_PUBLIC_POSTHOG_API_KEY=
