--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.4.0",
+		"react-paginate": "^8.1.3",
 		"siwe": "^2.0.5",
 		"swr": "^2.0.0-beta.7",
 		"tailwindcss": "^3.0.24",
@@ -37,6 +38,7 @@
 	"devDependencies": {
 		"@types/node": "^17.0.35",
 		"@types/react": "^18.0.9",
+		"@types/react-paginate": "^7.1.1",
 		"eslint": "8.16.0",
 		"eslint-config-next": "12.1.6",
 		"prettier-plugin-sort-imports-desc": "^1.0.0",
