--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@heroicons/react": "^2.0.11",
 		"@prisma/client": "^4.4.0",
 		"@tailwindcss/forms": "^0.5.3",
-		"@worldcoin/id": "^0.9.2",
+		"@worldcoin/idkit": "^0.2.6",
 		"autoprefixer": "^10.4.7",
 		"connectkit": "^0.0.2",
 		"ethers": "^5.7.1",
